# iac-factory-gui

./: INSTALL.md  README.md  __init__.py  pyproject.toml  run_gui.py  setup.py  start.sh
backend/: __init__.py  api_routes.py  code_generation.py  design_manager.py  enhanced_factory.py  main.py  requirements.txt  test_runner.py
backend/tests/: __init__.py  test_enhanced_factory.py  test_simple_round_trip.py
frontend/: app.js  index.html  styles.css
