[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iac-factory-gui"
version = "0.1.0"
description = "Interactive web-based GUI for iac-factory"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Manus AI"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "iac-factory>=0.1.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "hypothesis>=6.92.1",
    "black>=22.0.0",
]

[project.scripts]
iac-gui = "run_gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/iac-factory-gui"
Documentation = "https://github.com/yourusername/iac-factory-gui/docs"
Repository = "https://github.com/yourusername/iac-factory-gui"
"Bug Tracker" = "https://github.com/yourusername/iac-factory-gui/issues"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
frontend = ["*.html", "*.css", "*.js"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
